syntax = "proto3";
package Game.MasterData;

message ElementMessage {
  int32 element_id = 1;
  string key = 2;
  string label = 3;
  int32 icon_id = 4;
  string color_hex = 5;
  int32 sort_order = 6;
  bool is_active = 7;
  string meta = 8;
  string created_at = 9; // ISO8601 string
  string updated_at = 10;
}

message ElementList {
  repeated ElementMessage elements = 1;
}